# KomodoML

./: .buildinfo  .gitattributes  .gitignore  LICENSE  README.md  genindex.html  index.html  komodoml.base.html  komodoml.html  komodoml.models.html  komodoml.resampling.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  komodoml.base.doctree  komodoml.doctree  komodoml.models.doctree  komodoml.resampling.doctree
.github/workflows/: docs.yml  publish.yml
_sources/: index.rst.txt  komodoml.base.rst.txt  komodoml.resampling.rst.txt  komodoml.rst.txt
_static/: documentation_options.js
docs/: docs.md  index.html  komodoml.html  search.js
docs/komodoml/: base.html  models.html  resampling.html
docs/source/: conf.py  index.rst  komodoml.models.rst  komodoml.rst  modules.rst
komodoml/: __init__.py
komodoml/base/: __init__.py  base_model.py  wrapper.py
komodoml/models/: __init__.py  decision_tree.py
komodoml/resampling/: __init__.py  base.py  kfold.py
template/: custom.css
