[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "komodoml"
dynamic = ["version"]
description = "A unified ML toolkit for models, metrics, plotting, and interpretability."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name="Yeray Martínez", email="yeraym12@gmail.com" }
]
keywords = ["machine-learning", "ml", "toolkit", "metrics", "interpretability"]

dependencies = [
  "scikit-learn>=1.0.0",
  "scipy>=1.7.0",
  "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/yermarti/komodoml"
Documentation = "https://yermarti.github.io/KomodoML"
Repository = "https://github.com/yermarti/komodoml"
Issues = "https://github.com/yermarti/komodoml/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.dynamic]
version = {attr = "mymodule.__version__"}